syntax="proto3";

option java_package="org.proto.greet";
option java_multiple_files = true;

message Greeting{
  string first_name=1;
  string last_name=2;
}

message GreetingRequest{
  Greeting greeting=1;
}

message GreetingResponse{
  string result=1;
}

message GreetManyRequest{
  Greeting greeting=1;
}

message GreetManyResponse{
  string result=1;
}

service GreetService{
  rpc Greet(GreetingRequest) returns (GreetingResponse) {};
  rpc GreetManyTimes(GreetManyRequest) returns (stream GreetManyResponse){};
}